; ModuleID = '/home/carl/AnghaBench/sway/common/extr_loop.c_loop_destroy.c'
source_filename = "/home/carl/AnghaBench/sway/common/extr_loop.c_loop_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loop = type { %struct.loop*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @loop_destroy(%struct.loop* %0) #0 {
  %2 = alloca %struct.loop*, align 8
  store %struct.loop* %0, %struct.loop** %2, align 8
  %3 = load %struct.loop*, %struct.loop** %2, align 8
  %4 = getelementptr inbounds %struct.loop, %struct.loop* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @list_free_items_and_destroy(i32 %5)
  %7 = load %struct.loop*, %struct.loop** %2, align 8
  %8 = getelementptr inbounds %struct.loop, %struct.loop* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @list_free_items_and_destroy(i32 %9)
  %11 = load %struct.loop*, %struct.loop** %2, align 8
  %12 = getelementptr inbounds %struct.loop, %struct.loop* %11, i32 0, i32 0
  %13 = load %struct.loop*, %struct.loop** %12, align 8
  %14 = call i32 @free(%struct.loop* %13)
  %15 = load %struct.loop*, %struct.loop** %2, align 8
  %16 = call i32 @free(%struct.loop* %15)
  ret void
}

declare dso_local i32 @list_free_items_and_destroy(i32) #1

declare dso_local i32 @free(%struct.loop*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
